deployments/GOLD/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run node-app --image=legacywhisperer/node-app:latest --dry-run=true --replicas=3 --restart=Always --record=true --output=yaml
  creationTimestamp: null
  labels:
    run: node-app
    tier: api
  name: node-app
  namespace: mediaflow
spec:
  replicas: 1
  selector:
    matchLabels:
      run: node-app
      tier: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: node-app
        tier: api
    spec:
      containers:
      - image: legacywhisperer/node-app:latest
        name: node-app
        ports: 
          - containerPort: 3000
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: node-app
    tier: api
  name: nodesvc
  namespace: mediaflow
spec:
  ports:
  - port: 3000
    protocol: TCP
    nodePort: 30000
  selector:
    run: node-app
    tier: api
  type: NodePort
