deployments/GOLD/backendV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    tier: backend
    run: mongo
  name: mongo
  namespace: mediaflow
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      run: mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mongo
        tier: backend
    spec:
      containers:
      - image: mongo:latest
        name: mongodb
        ports: 
          - containerPort: 27017
        volumeMounts:
        - mountPath: "/data"
          name: aws-pv-mongo
      volumes:
      - name: aws-pv-mongo
        persistentVolumeClaim:
          claimName: aws-pvc-mongo
      
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: mongosvc
    tier: backend
  name: mongosvc
  namespace: mediaflow
spec:
  type: NodePort
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    nodePort: 30017
  selector:
    app: mongosvc
    tier: backend
