deployments/GOLD/middletierV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run node-app --image=legacywhisperer/node-app:latest --dry-run=true --replicas=3 --restart=Always --record=true --output=yaml
  creationTimestamp: null
  labels:
    run: node-prod
    tier: api
  name: node-prod
  namespace: mediaflow
spec:
  replicas: 3
  selector:
    matchLabels:
      run: node-prod
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: node-prod
        tier: api
    spec:
      containers:
      - image: legacywhisperer/node-app
        name: node-prod
        ports: 
          - containerPort: 3000
           
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nodesvc
    tier: api
  name: nodesvc
  namespace: mediaflow
spec:
  ports:
  - nodePort: 30000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: nodesvc
    tier: api
  type: NodePort
  
#  ports:
#    port: 4100
#    protocol: TCP
#    targetPort: 4100
#  selector:
#    run: reactsvc
#    tier: frontend
