deployments/GOLD/mongo-svc-operator.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mongosvc
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongosvc
  type: ClusterIP
status:
  loadBalancer: {}
