deployments/GOLD/node-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node
    spec:
      containers:
      - image: legacywhisperer/node-app:test
        name: node-app
        resources: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node
  name: nodesvc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30000
  selector:
    app: node
  type: NodePort
status:
  loadBalancer: {}
