deployments/GOLD/react-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"run":"reactsvc","tier":"frontend"},"name":"reactsvc","namespace":"mediaflow"},"spec":{"ports":[{"port":4100,"protocol":"TCP","targetPort":30100}],"selector":{"run":"reactsvc","tier":"frontend"},"type":"LoadBalancer"}}
  creationTimestamp: 2020-07-30T14:49:17Z
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    run: reactsvc
    tier: frontend
  name: reactsvc
  namespace: mediaflow
  resourceVersion: "14128"
  selfLink: /api/v1/namespaces/mediaflow/services/reactsvc
  uid: 368abb88-b7ef-4f3b-baba-cb4c99929a4e
spec:
  clusterIP: 10.100.80.99
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30100
    port: 4100
    protocol: TCP
    targetPort: 4100
  selector:
    run: reactsvc
    tier: frontend
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
