deployments/GOLD/rust-yew-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rust-yew-app
  name: rust-yew-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: rust-yew-app
  type: LoadBalancer
status:
  loadBalancer: {}
