deployments/GOLD/rustyew-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rustyew
  name: frontsvc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    nodePort: 30800
  selector:
    app: rustyew
  type: NodePort
status:
  loadBalancer: {}
